import views.Desktop;

public class Main {
    public static void main(String[] args) {
        Desktop.getMedicationForm();  // Lanza la aplicación
    }
}
