public interface InterestCalculable {
    double calculateMonthlyInterest();
}
