public interface MaturityCalculable {
    double calculateMonthlyInterest();
}
