public enum Transaction {
    DEPOSIT,
    WITHDRAWAL,
    TRANSFER,
    INTEREST;
}
