package products;

public interface Depositable {
    void deposit(double amount);
}
