package products;

public interface Withdrawable {
    void withdraw(double amount);
}
